[package]
name = "flat_rbtree"
version = "0.2.3"
edition = "2024"
authors = ["Matheus-git <mathiew0@gmail.com>"]
description = "A flat, index-based Red-Black Tree with no heap allocations. Ideal for performance-critical or memory-constrained environments."
license = "MIT"
repository = "https://github.com/matheus-git/flat_rbtree"
readme = "README.md"
keywords = ["rbtree", "red-black-tree", "no-alloc", "no_std", "embedded"]
categories = ["data-structures", "embedded", "no-std", "memory-management"]

[dependencies]

[dev-dependencies]
rand="0.9.1"
criterion = "0.6.0"
rbtree = "0.1.7"

[profile.bench]
debug = false

[[bench]]
name = "compare_rbtree"
harness = false

[[bench]]
name = "compare_btree"
harness = false

[features]
default = []
expanded = []

[package.metadata.docs.rs]
features = ["expanded"]
rustdoc-args = ["--cfg", "docsrs"]

